temp disable autorest

--- a/sdk/resourcemanager/Azure.ResourceManager/src/Azure.ResourceManager.csproj
+++ b/sdk/resourcemanager/Azure.ResourceManager/src/Azure.ResourceManager.csproj
@@ -10,6 +10,7 @@
     <PackageTags>azure;management;resource</PackageTags>
     <NoWarn>$(NoWarn);CA2214</NoWarn>
     <UseDefaultNamespaceAndOutputFolder>false</UseDefaultNamespaceAndOutputFolder>
+    <IncludeGeneratorSharedCode>true</IncludeGeneratorSharedCode>
   </PropertyGroup>
 
   <ItemGroup>
