--- a/sdk/edgeorder/Azure.ResourceManager.EdgeOrder/tests/Azure.ResourceManager.EdgeOrder.Tests.csproj
+++ b/sdk/edgeorder/Azure.ResourceManager.EdgeOrder/tests/Azure.ResourceManager.EdgeOrder.Tests.csproj
@@ -2,4 +2,9 @@
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.EdgeOrder.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SessionRecords\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Folder>
+  </ItemGroup>
 </Project>
