--- a/sdk/durabletask/Azure.ResourceManager.DurableTask/src/Azure.ResourceManager.DurableTask.csproj
+++ b/sdk/durabletask/Azure.ResourceManager.DurableTask/src/Azure.ResourceManager.DurableTask.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Version>1.0.0-beta.1</Version>
     <PackageId>Azure.ResourceManager.DurableTask</PackageId>
-    <Description>Azure Resource Manager client SDK for Azure resource provider InformaticaDataManagement.</Description>
-    <PackageTags>azure;management;arm;resource manager;informaticadatamanagement</PackageTags>
+    <Description>Azure Resource Manager client SDK for Azure resource provider DurableTask.</Description>
+    <PackageTags>azure;management;arm;resource manager;durabletask</PackageTags>
   </PropertyGroup>
 </Project>
