Upgrade to .NET 9 (#48424)
* initial changes

* trying eng sys fix

* update analyzer version

* updates

* tweaks

* tweaks, cleanup, consistency

* attempt

* attempt 2

* testing

* fix

* install .net 9 to unblock generate_matrix

* move the restore test recordings to below the installation of .net

* correct the template yaml

* keyvault fixes

* fix keyvault ci

* keyvault tests

* fix snippet

* attempt 3 at regenerating keyvault snippets...

* try deleting aot proj

* additional pipeline fixes

---------

Co-authored-by: Scott Beddall <scbedd@microsoft.com>

--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -405,6 +405,8 @@ jobs:
                 echo "##vso[task.setvariable variable=DISCOVER_DEPENDENT_PACKAGES]1"
               displayName: Enable AdditionalDependency Calculation
 
+            - template: /eng/pipelines/templates/steps/install-dotnet.yml
+
             - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
               parameters:
                 ServiceDirectory: ${{parameters.ServiceDirectory}}
