delete azure.resourcemanager service.props, add a triggering path to core ci so that we will trigger azure.core tests when there are changes to resourcemanager package (#48529)

--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -44,6 +44,8 @@ extends:
     Artifacts:
     - name: Azure.Core
       safeName: AzureCore
+      triggeringPaths:
+      - /sdk/resourcemanager/
     - name: Azure.Core.Experimental
       safeName: AzureCoreExperimental
     - name: Azure.Core.Expressions.DataFactory
