Added AppConfig and Chat Completion Helper APIs (#48546)
* added support for app configuration

* updated apis

* PR feedback

* PR feedback

* updated api file

--- a/sdk/cloudmachine/Azure.Projects.Provisioning/src/Azure.Projects.Provisioning.csproj
+++ b/sdk/cloudmachine/Azure.Projects.Provisioning/src/Azure.Projects.Provisioning.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Azure.Provisioning.ServiceBus" />
     <PackageReference Include="Azure.Provisioning.EventGrid" />
     <PackageReference Include="Azure.Provisioning.AppService" />
+    <PackageReference Include="Azure.Provisioning.AppConfiguration" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
   </ItemGroup>
 
