--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -199,9 +199,12 @@
   </ItemGroup>
 
   <ItemGroup Condition="$(MSBuildProjectName.Contains('Azure.Projects'))">
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
+    <PackageReference Update="Azure.Data.AppConfiguration" Version="1.5.0"/>
     <PackageReference Update="Azure.Provisioning.Deployment" Version="1.0.0-beta.2"/>
+    <PackageReference Update="Azure.Provisioning.AppConfiguration" Version="1.0.0"/>
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0"/>
+    <PackageReference Update="System.Memory.Data" Version="8.0.1"/>
   </ItemGroup>
 
   <!--
