--- a/eng/Directory.Build.Common.targets
+++ b/eng/Directory.Build.Common.targets
@@ -100,6 +100,7 @@
 
   <!-- Remove packages built into the .NET 6+ runtime -->
   <ItemGroup Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net6.0'))">
+    <PackageReference Remove="Microsoft.Bcl.AsyncInterfaces" />
     <PackageReference Remove="System.Buffers" />
     <PackageReference Remove="System.Diagnostics.DiagnosticSource" />
     <PackageReference Remove="System.Net.Http" />
@@ -107,6 +108,7 @@
     <PackageReference Remove="System.Text.Encodings.Web" />
     <PackageReference Remove="System.Text.Json" />
     <PackageReference Remove="System.Threading.Channels" />
+    <PackageReference Remove="System.Threading.Tasks.Extensions" />
   </ItemGroup>
 
   <!-- Add Package Icon to DataPlane Packages -->
