[Azure.AI.project] Implement ConnectionProvider abstraction and add extension methods (#48399)
[Azure.AI.project] Implement ConnectionProvider abstraction and add extension methods

--- a/sdk/openai/Azure.AI.OpenAI/src/Azure.AI.OpenAI.csproj
+++ b/sdk/openai/Azure.AI.OpenAI/src/Azure.AI.OpenAI.csproj
@@ -54,6 +54,7 @@
     <Otherwise>
       <ItemGroup>
         <PackageReference Include="Azure.Core" />
+        <ProjectReference Include="..\..\..\core\System.ClientModel\src\System.ClientModel.csproj" />
       </ItemGroup>
     </Otherwise>
   </Choose>
