--- a/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
+++ b/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
@@ -15,6 +15,9 @@
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.AI.Projects.csproj" />
+    <ProjectReference Include="..\..\Azure.AI.Inference\src\Azure.AI.Inference.csproj" />
+    <ProjectReference Include="..\..\..\openai\Azure.AI.OpenAI\src\Azure.AI.OpenAI.csproj" />
+    <ProjectReference Include="..\..\..\search\Azure.Search.Documents\src\Azure.Search.Documents.csproj" />
   </ItemGroup>
   
   <ItemGroup>
