added NET9.0 to web.test project

--- a/sdk/cloudmachine/Azure.Projects.Web/tests/Azure.Projects.Web.Tests.csproj
+++ b/sdk/cloudmachine/Azure.Projects.Web/tests/Azure.Projects.Web.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <LangVersion>12</LangVersion>
-    <TargetFrameworks>net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <RequiredTargetFrameworks>net8.0</RequiredTargetFrameworks>
   </PropertyGroup>
   
