--- a/sdk/cloudmachine/Azure.Projects.Web/src/Azure.Projects.Web.csproj
+++ b/sdk/cloudmachine/Azure.Projects.Web/src/Azure.Projects.Web.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Azure.Projects.Web is an ASP.NET Core extensions for Azure.Projects</Description>
     <Version>1.0.0-beta.1</Version>
-    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0;net462</TargetFrameworks>
     <RequiredTargetFrameworks>net8.0</RequiredTargetFrameworks>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
