--- a/sdk/storage/ci.yml
+++ b/sdk/storage/ci.yml
@@ -12,6 +12,7 @@ trigger:
     - sdk/storage/Azure.Storage.DataMovement/
     - sdk/storage/Azure.Storage.DataMovement.Blobs/
     - sdk/storage/Azure.Storage.DataMovement.Files/
+    - sdk/storage/Azure.Storage.DataMovement.Blobs.Files.Shares/
     exclude:
     - sdk/storage/Azure.ResourceManager.Storage/
     - sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage/
@@ -34,6 +35,7 @@ pr:
     - sdk/storage/Azure.Storage.DataMovement/
     - sdk/storage/Azure.Storage.DataMovement.Blobs/
     - sdk/storage/Azure.Storage.DataMovement.Files/
+    - sdk/storage/Azure.Storage.DataMovement.Blobs.Files.Shares/
     - sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage/
     - sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage.Blobs/
     - sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage.Common/
