--- a/sdk/confidentialledger/Azure.Security.CodeTransparency/src/Azure.Security.CodeTransparency.csproj
+++ b/sdk/confidentialledger/Azure.Security.CodeTransparency/src/Azure.Security.CodeTransparency.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Core" />
+    <PackageReference Include="Azure.Security.KeyVault.Keys" />
     <PackageReference Include="System.ClientModel" />
     <PackageReference Include="System.Text.Json" />
     <PackageReference Include="System.Security.Cryptography.Cose" />
