moved CM connections to app config (#48603)
* moved to app config

* renamed extensions back due to conflick

* updated apis

* added NET9.0 to web project

* added NET9.0 to web.test project

* added NET 462 to web.test project

* removed web tests

* removed web tests

* removed web tests

* removed web tests

--- a/sdk/cloudmachine/Azure.Projects/samples/HelloRAG/HelloRAG.csproj
+++ b/sdk/cloudmachine/Azure.Projects/samples/HelloRAG/HelloRAG.csproj
@@ -14,5 +14,11 @@
     <ProjectReference Include="..\..\src\Azure.Projects.csproj" />
     <ProjectReference Include="..\..\..\Azure.Projects.Provisioning\src\Azure.Projects.Provisioning.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   
 </Project>
