--- a/sdk/ai/Azure.AI.Inference/src/Azure.AI.Inference.csproj
+++ b/sdk/ai/Azure.AI.Inference/src/Azure.AI.Inference.csproj
@@ -17,10 +17,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Core" />
+    <PackageReference Include="System.ClientModel" />
     <PackageReference Include="System.Text.Json" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\core\System.ClientModel\src\System.ClientModel.csproj" />
   </ItemGroup>
 
 </Project>
