--- a/sdk/cloudmachine/Azure.Projects/src/Azure.Projects.csproj
+++ b/sdk/cloudmachine/Azure.Projects/src/Azure.Projects.csproj
@@ -24,11 +24,7 @@
     <PackageReference Include="Azure.AI.Inference" />
     <PackageReference Include="Azure.Search.Documents" />
     <PackageReference Include="System.Memory.Data" />
-    <PackageReference Include="System.ClientModel" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\core\System.ClientModel\src\System.ClientModel.csproj" />
+    <PackageReference Include="System.ClientModel" VersionOverride="1.4.0-beta.1" />
   </ItemGroup>
 
 </Project>
