--- a/sdk/openai/Azure.AI.OpenAI/src/Azure.AI.OpenAI.csproj
+++ b/sdk/openai/Azure.AI.OpenAI/src/Azure.AI.OpenAI.csproj
@@ -54,7 +54,7 @@
     <Otherwise>
       <ItemGroup>
         <PackageReference Include="Azure.Core" />
-        <ProjectReference Include="..\..\..\core\System.ClientModel\src\System.ClientModel.csproj" />
+        <PackageReference Include="System.ClientModel" VersionOverride="1.4.0-beta.1" />
       </ItemGroup>
     </Otherwise>
   </Choose>
