--- a/eng/pipelines/templates/steps/build.yml
+++ b/eng/pipelines/templates/steps/build.yml
@@ -62,6 +62,8 @@ steps:
     parameters:
       PackageInfo: '$(Build.ArtifactStagingDirectory)/PackageInfo'
       Artifacts: ${{ parameters.Artifacts }}
+      ${{ if ne(parameters.ServiceDirectory, 'auto') }}:
+        SetOverrideFile: false
 
   - pwsh: |
       # Reset SkipDevBuildNumber as empty
@@ -121,7 +123,7 @@ steps:
         /p:Configuration=$(BuildConfiguration)
         /p:CommitSHA=$(Build.SourceVersion)
         /p:ArtifactsPackagesDir=$(Build.ArtifactStagingDirectory)
-        /p:ProjectListOverrideFile=""
+        /p:ProjectListOverrideFile=$(ProjectListOverrideFile)
         $(DiagnosticArguments)
       displayName: "Build and Package Service Directory"
 
