--- a/eng/pipelines/templates/steps/set-artifact-packages.yml
+++ b/eng/pipelines/templates/steps/set-artifact-packages.yml
@@ -3,6 +3,7 @@ parameters:
   Artifacts: []
   IncludeIndirect: true
   Restore: false
+  SetOverrideFile: true
 steps:
   # Package-Properties folder contains the package properties for all discovered packages that were either A) affected by the PR or
   # B) explicitly present in the service directory. This repo splits the builds into two categories: "mgmt" and "dataplane". While
@@ -47,6 +48,7 @@ steps:
         -ProjectNames "$(ProjectNames)" `
         -PackageInfoFolder "${{ parameters.PackageInfo }}" `
         -OutputPath $(Build.SourcesDirectory)/projlist
+        -SetOverrideFile $${{ parameters.SetOverrideFile }}
     displayName: Resolve Service and Project List
     condition: ne(variables['ProjectNames'], '')
 
