--- a/eng/pipelines/templates/steps/set-artifact-packages.yml
+++ b/eng/pipelines/templates/steps/set-artifact-packages.yml
@@ -47,7 +47,7 @@ steps:
       ./eng/scripts/splittestdependencies/set-artifact-packages.ps1 `
         -ProjectNames "$(ProjectNames)" `
         -PackageInfoFolder "${{ parameters.PackageInfo }}" `
-        -OutputPath $(Build.SourcesDirectory)/projlist
+        -OutputPath $(Build.SourcesDirectory)/projlist `
         -SetOverrideFile $${{ parameters.SetOverrideFile }}
     displayName: Resolve Service and Project List
     condition: ne(variables['ProjectNames'], '')
