--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -94,7 +94,7 @@ jobs:
         parameters:
           PackageInfo: '$(Build.ArtifactStagingDirectory)/PackageInfo'
           Artifacts: ${{ parameters.Artifacts }}
-          IncludeIndirect: false
+          IncludeIndirect: true
 
       - pwsh: |
           # Reset SkipDevBuildNumber as empty
@@ -311,27 +311,20 @@ jobs:
         parameters:
           LogFilePath: $(Build.ArtifactStagingDirectory)/rebuild.binlog
 
-      # todo, refactor to using the projectlistoverridefile
+      - task: Powershell@2
+        displayName: Build snippets
+        condition: and(succeeded(), eq(${{ parameters.BuildSnippets }}, true))
+        inputs:
+          filePath: /eng/scripts/Build-Snippets.ps1
+          arguments: >
+            -PackageInfoFolder "$(Build.ArtifactStagingDirectory)/PackageInfo"
+            -SdkType "${{ parameters.SDKType }}"
+            -DiagnosticArguments "$(DiagnosticArguments)"
+            -ProjectNames "$(ProjectNames)"
+          pwsh: true
+
       - pwsh: |
-          $failed = $false
-          if ("$(ProjectNames)") {
-            dotnet build eng/service.proj -warnaserror `
-                /t:rebuild `
-                /p:DebugType=none `
-                /p:SDKType=${{ parameters.SDKType }} `
-                /p:ServiceDirectory=* `
-                /p:IncludePerf=false `
-                /p:IncludeStress=false `
-                /p:PublicSign=false `
-                /p:Configuration=$(BuildConfiguration) `
-                /p:EnableSourceLink=false `
-                /p:BuildSnippets=true `
-                /p:ProjectListOverrideFile=$(ProjectListOverrideFile)
-                $(DiagnosticArguments)
-          }
-          else {
-            Write-Host "No services were directly changed. Skipping snippet build."
-          }
+
         displayName: Build snippets
         condition: and(succeeded(), eq(${{ parameters.BuildSnippets }}, true))
 
