--- a/sdk/support/Azure.ResourceManager.Support/src/Azure.ResourceManager.Support.csproj
+++ b/sdk/support/Azure.ResourceManager.Support/src/Azure.ResourceManager.Support.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.2.0-beta.1</Version>
+    <Version>1.1.1</Version>
     <ApiCompatVersion>1.1.0</ApiCompatVersion>
     <!--The ApiCompatVersion is managed automatically and should not generally be modified manually.-->
     <PackageId>Azure.ResourceManager.Support</PackageId>
