Apply resourceMetadata decorator for generator to consume

--- a/eng/packages/http-client-csharp/package.json
+++ b/eng/packages/http-client-csharp/package.json
@@ -23,24 +23,24 @@
     "dist/**"
   ],
   "dependencies": {
-    "@typespec/http-client-csharp": "0.1.9-alpha.20250223.1"
+    "@typespec/http-client-csharp": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvNDYzMzU1MS9hcnRpZmFjdE5hbWUvYnVpbGRfYXJ0aWZhY3RzX2NzaGFycA2/content?format=file&subPath=%2Fpackages%2Ftypespec-http-client-csharp-0.1.9-alpha.20250309.22.tgz"
   },
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.6",
-    "@azure-tools/typespec-azure-core": "0.51.0",
-    "@azure-tools/typespec-client-generator-core": "0.51.1",
-    "@azure-tools/typespec-azure-resource-manager": "0.51.0",
-    "@azure-tools/typespec-azure-rulesets": "0.51.0",
-    "@azure-tools/typespec-autorest": "0.51.0",
-    "@typespec/compiler": "0.65.0",
-    "@typespec/http": "0.65.0",
-    "@typespec/http-specs": "0.1.0-alpha.9",
-    "@typespec/json-schema": "0.65.0",
-    "@typespec/library-linter": "0.65.0",
-    "@typespec/openapi": "0.65.0",
-    "@typespec/rest": "0.65.0",
-    "@typespec/versioning": "0.65.0",
-    "@typespec/xml": "0.65.0",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.7",
+    "@azure-tools/typespec-azure-core": "0.52.0",
+    "@azure-tools/typespec-client-generator-core": "0.52.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.52.0",
+    "@azure-tools/typespec-azure-rulesets": "0.52.0",
+    "@azure-tools/typespec-autorest": "0.52.0",
+    "@typespec/compiler": "0.66.0",
+    "@typespec/http": "0.66.0",
+    "@typespec/http-specs": "0.1.0-alpha.11",
+    "@typespec/json-schema": "0.66.0",
+    "@typespec/library-linter": "0.66.0",
+    "@typespec/openapi": "0.66.0",
+    "@typespec/rest": "0.66.0",
+    "@typespec/versioning": "0.66.0",
+    "@typespec/xml": "0.66.0",
     "@types/node": "~22.7.5",
     "@types/prettier": "^2.6.3",
     "@vitest/coverage-v8": "^3.0.5",
