update codeowners for dts

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -499,10 +499,10 @@
 # ServiceOwners:                                                   @thang-bit
 
 # PRLabel: %Durable Task Scheduler
-/sdk/durabletask/                                                  @berndverst @kaibocai @torosent @ItalyPaleAle @RyanLettieri @philliphoff @cgillum
+/sdk/durabletask/                                                  @berndverst @kaibocai @torosent @halspang @RyanLettieri @philliphoff @cgillum
 
 # ServiceLabel: %Durable Task Scheduler
-# ServiceOwners:                                                   @berndverst @kaibocai @torosent @ItalyPaleAle @RyanLettieri @philliphoff @cgillum
+# ServiceOwners:                                                   @berndverst @kaibocai @torosent @halspang @RyanLettieri @philliphoff @cgillum
 
 # PRLabel: %Event Grid
 /sdk/eventgrid/                                                    @Kishp01 @ahamad-MS @JoshLove-msft @jsquire @m-redding
