--- a/sdk/timeseriesinsights/Azure.IoT.TimeSeriesInsights/samples/TimeSeriesInsightsClientSample/Azure.IoT.TimeSeriesInsights.Tests.ClientSample.csproj
+++ b/sdk/timeseriesinsights/Azure.IoT.TimeSeriesInsights/samples/TimeSeriesInsightsClientSample/Azure.IoT.TimeSeriesInsights.Tests.ClientSample.csproj
@@ -3,9 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <IsTestProject>true</IsTestProject>
+    <IsShippingLibrary>false</IsShippingLibrary>
     <IsSamplesProject>true</IsSamplesProject>
-    <IsTestSupportProject>true</IsTestSupportProject>
     <ExcludeFromCodeCoverage>true</ExcludeFromCodeCoverage>
     <IsPackable>false</IsPackable>
     <WarnOnPackingNonPackableProject>false</WarnOnPackingNonPackableProject>
